added server dummy code and ui connection
