# backend/openapi.yaml
@@ -18,60 +18,63 @@ paths:
           content:
             application/json:
               schema:
-                type: object
-                properties:
-                  currencies:
-                    type: array
-                    items:
-                      type: string
-                    example: [ "USD", "EUR", "INR", "GBP", "JPY", "CAD" ]
+                type: array
+                items:
+                  type: string
+                example: ["USD", "EUR", "INR", "GBP", "JPY", "CAD"]
         "500":
           description: Internal server error
+
   /currency/conversion:
-    get:
+    post:
       summary: Convert currency
       description: Converts an amount from one currency to another
       operationId: convertCurrency
-      parameters:
-        - name: from
-          in: query
-          required: true
-          schema:
-            type: string
-          description: The currency to convert from (e.g., USD)
-        - name: to
-          in: query
-          required: true
-          schema:
-            type: string
-          description: The currency to convert to (e.g., INR)
-        - name: amount
-          in: query
-          required: true
-          schema:
-            type: number
-          description: The amount to convert
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: "#/components/schemas/CurrencyConversionInputDTO"
       responses:
         "200":
           description: Successfully converted the currency
           content:
             application/json:
               schema:
-                type: object
-                properties:
-                  from:
-                    type: string
-                    example: USD
-                  to:
-                    type: string
-                    example: INR
-                  amount:
-                    type: number
-                    example: 1
-                  convertedAmount:
-                    type: number
-                    example: 83.50
+                $ref: "#/components/schemas/CurrencyConversionResultDTO"
         "400":
           description: Invalid input parameters
         "500":
           description: Internal server error
+
+components:
+  schemas:
+    CurrencyConversionInputDTO:
+      type: object
+      properties:
+        sourceCurrency:
+          type: string
+          example: "USD"
+        targetCurrency:
+          type: string
+          example: "INR"
+        amount:
+          type: number
+          example: 100.0
+
+    CurrencyConversionResultDTO:
+      type: object
+      properties:
+        sourceCurrency:
+          type: string
+          example: "USD"
+        destinationCurrency:
+          type: string
+          example: "INR"
+        inputValue:
+          type: number
+          example: 100.0
+        conversionResultValue:
+          type: number
+          example: 8350.0
