# backend/src/main/java/com/thisissvikas/currency_converter/currency/CurrencyConversionInputDTO.java
@@ -1,0 +1,3 @@
+package com.thisissvikas.currency_converter.currency;
+
+public record CurrencyConversionInputDTO(String sourceCurrency, String targetCurrency, double amount) {}
