# backend/src/main/java/com/thisissvikas/currency_converter/currency/CurrencyConversionResultDTO.java
@@ -1,0 +1,5 @@
+package com.thisissvikas.currency_converter.currency;
+
+
+public record CurrencyConversionResultDTO(String sourceCurrency, String destinationCurrency, double inputValue,
+                                          double conversionResultValue) {}
